tests/NormalTests/paczka1/small_fuzzy/90885080.err
Error in line 5: JsIl62l A95 65,2
Error in line 4: A541 A541 34,9
